api-resources/default/e643234e-d5a0-4262-b412-aee46d098b89/1/default_e643234e-d5a0-4262-b412-aee46d098b89_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: external
    namespace: gateway-system
  rules:
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /v1/dog
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: POST
      path:
        type: Exact
        value: /v1/dog
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /v1/cat
